--- a/abstract/_reset.scss
+++ b/abstract/_reset.scss
@@ -29,7 +29,10 @@ body {
   padding: 2rem;
   height: 100vh;
   width: 100vw;
-  overflow: hidden; 
+  overflow: hidden;
+  @media (max-width: 800px) {
+    padding: .5rem;
+  }
 }
 
 #preloader {
