--- a/pages/_pages.scss
+++ b/pages/_pages.scss
@@ -5,6 +5,9 @@
     right: 0;
     bottom: 0;
     padding: 0 5rem 5rem 0;
+    @media (max-width: 800px) {
+        padding: 0 1.5rem 1.5rem 0;
+      }
     .page {
         display: none;
     }
@@ -18,7 +21,7 @@
         text-align: left;
         p {
             max-width: 30ch;
-            font-size: 1.2rem;
+            font-size: 1rem;
             text-align: left;
         }
     }
@@ -26,19 +29,28 @@
         text-align: right;
         .containerproject {
             display: flex;
+            gap: 20px;
             flex-direction: column;
+
+            overflow-y: scroll; 
+            scrollbar-width: thin; 
+            scrollbar-color: transparent transparent; 
+
             .projecttexts {
                 display: flex;
-                gap: 15px;
+                flex-direction: column-reverse;
                 justify-content: flex-end;
-                p {
-                    margin-top: 4.6rem;
-                }
                 a {
                     position: relative;
-                    font-size: 6rem;
+                    font-size: 4rem;
                     color: #333;
                     text-decoration: none;
+                    @media (max-width: 900px) {
+                        font-size: 3rem;
+                      }
+                      @media (max-width: 900px) {
+                        font-size: 2rem;
+                      }
                   }
                   .hoverimage {
                     display: none;
@@ -48,12 +60,65 @@
                     left: -150px;
                     pointer-events: none;
                     transition: transform 0.2s ease-out;
-                    border: 5px solid #333;
                   }
                   a:hover .hoverimage {
                     display: block;
                     z-index: 20;
                   }
+            }
+        }
+    }
+    .contact {
+        .midias {
+            display: flex;
+            flex-direction: column;
+            margin-top: 2rem;
+            gap: 10px;
+            span {
+                font-size: .5rem;
+            }
+            .underline {
+                --line: #646B8C;
+                --color: #2B3044;
+                text-decoration: none;
+                color: var(--color);
+                position: relative;
+                width: 87px;
+                span {
+                    background-image: linear-gradient(0deg, var(--line) 0%, var(--line) 100%);
+                    background-position: 100% 100%;
+                    background-repeat: no-repeat;
+                    background-size: var(--background-size, 100%) 1px;
+                    transition: background-size .2s linear var(--background-delay, .15s);
+                    font-size: 16px;
+                    line-height: 20px;
+                    transform: translateZ(0);
+                }
+                svg {
+                    vertical-align: top;
+                    display: inline;
+                    line-height: 1;
+                    width: 13px;
+                    height: 20px;
+                    position: relative;
+                    left: -2px;
+                    fill: none;
+                    stroke-linecap: round;
+                    stroke-linejoin: round;
+                    stroke-width: 1px;
+                    stroke: var(--line);
+                    stroke-dasharray: 7.95 30;
+                    stroke-dashoffset: var(--stroke-dashoffset, 46);
+                    transition: stroke-dashoffset var(--stroke-duration, .15s) var(--stroke-easing, linear) var(--stroke-delay, 0s);
+                }
+                &:hover {
+                    --background-size: 0%;
+                    --background-delay: 0s;
+                    --stroke-dashoffset: 26;
+                    --stroke-duration: .3s;
+                    --stroke-easing: cubic-bezier(.3, 1.5, .5, 1);
+                    --stroke-delay: .195s;
+                }
             }
         }
     }
