--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,6 +29,11 @@ body {
   width: 100vw;
   overflow: hidden;
 }
+@media (max-width: 800px) {
+  body {
+    padding: 0.5rem;
+  }
+}
 
 #preloader {
   position: fixed;
@@ -124,13 +129,26 @@ main .description .title span {
 main .description .title h1 {
   font-size: 5rem;
 }
+@media (max-width: 800px) {
+  main .description .title h1 {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 380px) {
+  main .description .title h1 {
+    font-size: 30px;
+  }
+}
 main .description .textsdescription span {
   font-size: 1px;
 }
+main .description .textsdescription h2 {
+  font-size: 1rem;
+}
 main .description .textsdescription p {
-  max-width: 40ch;
-  font-size: 1.1rem;
-  margin: 10px 0;
+  max-width: 33ch;
+  font-size: 0.9rem;
+  margin-top: 1rem;
 }
 main .links {
   margin-top: 1rem;
@@ -148,16 +166,90 @@ main .links nav ul li {
 main .links nav ul .indexcontent {
   color: #000000;
 }
-main .midias {
+
+.contentpages {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 0 5rem 5rem 0;
+}
+@media (max-width: 800px) {
+  .contentpages {
+    padding: 0 1.5rem 1.5rem 0;
+  }
+}
+.contentpages .page {
+  display: none;
+}
+.contentpages .page.active {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  animation: ShowingContent 0.7s forwards;
+}
+.contentpages .home {
+  text-align: left;
+}
+.contentpages .home p {
+  max-width: 30ch;
+  font-size: 1rem;
+  text-align: left;
+}
+.contentpages .project {
+  text-align: right;
+}
+.contentpages .project .containerproject {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+}
+.contentpages .project .containerproject .projecttexts {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+}
+.contentpages .project .containerproject .projecttexts a {
+  position: relative;
+  font-size: 4rem;
+  color: #333;
+  text-decoration: none;
+}
+@media (max-width: 900px) {
+  .contentpages .project .containerproject .projecttexts a {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 900px) {
+  .contentpages .project .containerproject .projecttexts a {
+    font-size: 2rem;
+  }
+}
+.contentpages .project .containerproject .projecttexts .hoverimage {
+  display: none;
+  width: 300px;
+  position: absolute;
+  bottom: 98px;
+  left: -150px;
+  pointer-events: none;
+  transition: transform 0.2s ease-out;
+}
+.contentpages .project .containerproject .projecttexts a:hover .hoverimage {
+  display: block;
+  z-index: 20;
+}
+.contentpages .contact .midias {
   display: flex;
   flex-direction: column;
   margin-top: 2rem;
   gap: 10px;
 }
-main .midias span {
+.contentpages .contact .midias span {
   font-size: 0.5rem;
 }
-main .midias .underline {
+.contentpages .contact .midias .underline {
   --line: #646B8C;
   --color: #2B3044;
   text-decoration: none;
@@ -165,7 +257,7 @@ main .midias .underline {
   position: relative;
   width: 87px;
 }
-main .midias .underline span {
+.contentpages .contact .midias .underline span {
   background-image: linear-gradient(0deg, var(--line) 0%, var(--line) 100%);
   background-position: 100% 100%;
   background-repeat: no-repeat;
@@ -175,7 +267,7 @@ main .midias .underline span {
   line-height: 20px;
   transform: translateZ(0);
 }
-main .midias .underline svg {
+.contentpages .contact .midias .underline svg {
   vertical-align: top;
   display: inline;
   line-height: 1;
@@ -192,72 +284,13 @@ main .midias .underline svg {
   stroke-dashoffset: var(--stroke-dashoffset, 46);
   transition: stroke-dashoffset var(--stroke-duration, 0.15s) var(--stroke-easing, linear) var(--stroke-delay, 0s);
 }
-main .midias .underline:hover {
+.contentpages .contact .midias .underline:hover {
   --background-size: 0%;
   --background-delay: 0s;
   --stroke-dashoffset: 26;
   --stroke-duration: .3s;
   --stroke-easing: cubic-bezier(.3, 1.5, .5, 1);
   --stroke-delay: .195s;
-}
-
-.contentpages {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  padding: 0 5rem 5rem 0;
-}
-.contentpages .page {
-  display: none;
-}
-.contentpages .page.active {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  animation: ShowingContent 0.7s forwards;
-}
-.contentpages .home {
-  text-align: left;
-}
-.contentpages .home p {
-  max-width: 30ch;
-  font-size: 1.2rem;
-  text-align: left;
-}
-.contentpages .project {
-  text-align: right;
-}
-.contentpages .project .containerproject {
-  display: flex;
-  flex-direction: column;
-}
-.contentpages .project .containerproject .projecttexts {
-  display: flex;
-  gap: 15px;
-  justify-content: flex-end;
-}
-.contentpages .project .containerproject .projecttexts p {
-  margin-top: 4.6rem;
-}
-.contentpages .project .containerproject .projecttexts a {
-  position: relative;
-  font-size: 6rem;
-  color: #333;
-  text-decoration: none;
-}
-.contentpages .project .containerproject .projecttexts .hoverimage {
-  display: none;
-  width: 300px;
-  position: absolute;
-  bottom: 98px;
-  left: -150px;
-  pointer-events: none;
-  transition: transform 0.2s ease-out;
-  border: 5px solid #333;
-}
-.contentpages .project .containerproject .projecttexts a:hover .hoverimage {
-  display: block;
-  z-index: 20;
 }
 
 @keyframes ShowingContent {
